# WorldAtWar

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
assets/alliances/: CSTO.alliance.ron  NATO.alliance.ron
assets/countries/: AD.country.ron  AE.country.ron  AF.country.ron  AG.country.ron  AI.country.ron  AL.country.ron  AM.country.ron  AO.country.ron  AQ.country.ron  AR.country.ron  AS.country.ron  AT.country.ron  AU.country.ron  AW.country.ron  AX.country.ron  AZ.country.ron  BA.country.ron  BB.country.ron  BD.country.ron  BE.country.ron  BF.country.ron  BG.country.ron  BH.country.ron  BI.country.ron  BJ.country.ron  BL.country.ron  BM.country.ron  BN.country.ron  BO.country.ron  BQ.country.ron  BR.country.ron  BS.country.ron  BT.country.ron  BV.country.ron  BW.country.ron  BY.country.ron  BZ.country.ron  CA.country.ron  CC.country.ron  CD.country.ron  (+210 more)
assets/earth/: shader.wgsl
assets/fonts/Monofur/: README.md
assets/models/b2/: license.txt  scene.gltf
assets/models/ddg-15/: scene.gltf
assets/models/m1/: license.txt  scene.gltf
assets/shaders/earth/: bindings.wgsl  fragment.wgsl  land.wgsl  ocean.wgsl  types.wgsl
assets/weapons/: aim7.weapon.ron  b2.weapon.ron  ddg-15.weapon.ron  m1.weapon.ron
crates/combatants/: Cargo.toml
crates/combatants/src/: alliance.rs  color.rs  combatant.rs  lib.rs  plugin.rs  relationship.rs
crates/core/: Cargo.toml
crates/core/examples/: core.rs
crates/core/src/: args.rs  core.rs  default.rs  lib.rs
crates/countries/: Cargo.toml
crates/countries/examples/: countries.rs
crates/countries/processor/: Cargo.toml
crates/countries/processor/src/: main.rs
crates/countries/scripts/: city_deduplication.py
crates/countries/src/: data.rs  labels.rs  lib.rs  plugin.rs
crates/countries/src/systems/: load_countries.rs  mod.rs  spawn_labels.rs  update_label_positions.rs  update_label_visibility.rs
crates/data_processor/: Cargo.toml
crates/data_processor/src/: main.rs
crates/earth/: Cargo.toml
crates/earth/examples/: earth.rs
crates/earth/preprocess/: Cargo.toml
crates/earth/preprocess/src/: cli.rs  lib.rs
crates/earth/preprocess/src/core/: dataset.rs  fill_no_data.rs  gdal_extension.rs  mod.rs  transformers.rs
crates/earth/preprocess/src/process/: downsample.rs  reproject.rs  split.rs  stitch.rs
crates/earth/processor/: Cargo.toml
crates/earth/processor/src/: main.rs
crates/earth/processor/src/args/: command.rs  mod.rs  resolution.rs
crates/earth/processor/src/processing/: draw_line.rs  fill_polygon.rs  mod.rs  render_shapefile.rs  scale_image.rs
crates/earth/processor/src/textures/: base_color.rs  bathyometry.rs  chlorophyll.rs  distance_map.rs  lake_mask.rs  light_mask.rs  mod.rs  night_base_color.rs  normal_map.rs  road_mask.rs  topography.rs  urban_areas.rs
crates/earth/render/: Cargo.toml
crates/earth/render/examples/: earth.rs
crates/earth/render/src/: earth.rs  material.rs  plugin.rs  view.rs
crates/earth/render/src/data/: gpu_attachment.rs  gpu_tile_atlas.rs  mod.rs  tile_tree.rs
crates/earth/render/src/debug/: approximation_debug.rs  camera.rs  mod.rs  orbital_camera.rs
crates/earth/render/src/math/: coordinate.rs  mod.rs  surface_approximation.rs
crates/earth/render/src/picking/: mod.rs  plugin.rs
crates/earth/render/src/picking/systems/: mod.rs  picking.rs  readback.rs
crates/earth/render/src/preprocess/: pipeline.rs  prepass.rs
crates/earth/render/src/render/: bind_group.rs  pass.rs
crates/earth/render/src/shaders/: attachments.wgsl  bindings.wgsl  debug.wgsl  functions.wgsl  mipmap.wgsl  mod.rs  types.wgsl
crates/earth/render/src/shaders/render/: fragment.wgsl  vertex.wgsl
crates/earth/render/src/shaders/tiling_prepass/: prepare_prepass.wgsl  refine_tiles.wgsl
crates/earth/render/src/utils/: mod.rs
crates/earth/src/: lib.rs  material.rs  plugin.rs
crates/earth/src/data/: attachment.rs  gpu_tile_atlas.rs  tile_atlas.rs  tile_loader.rs
crates/earth/src/detail/: camera.rs  graph.rs  mod.rs
crates/earth/src/geometry/: chunk.rs  face.rs  heightmap.rs  mesh_gen.rs  mod.rs
crates/earth/src/math/: earth_shape.rs
crates/earth/src/picking/: pass.rs  pipeline.rs
crates/earth/src/preprocess/: mod.rs  pipeline.rs
crates/earth/src/render/: material.rs  mod.rs  tiling_prepass.rs  view_bind_group.rs
crates/earth/src/shaders/: attachments.wgsl  bindings.wgsl  debug.wgsl  functions.wgsl  mipmap.wgsl  types.wgsl
crates/earth/src/shaders/render/: fragment.wgsl  vertex.wgsl
crates/earth/src/shaders/tiling_prepass/: prepare_prepass.wgsl  refine_tiles.wgsl
crates/earth/src/systems/: merge_chunks.rs  mod.rs  spawn_base_tiles.rs  subdivide_chunks.rs
crates/earth/src/utils/: spawn.rs
crates/geocoord/: Cargo.toml
crates/geocoord/src/: lib.rs
crates/operation/: Cargo.toml
crates/operation/examples/: operation.rs
crates/operation/src/: lib.rs  plugin.rs
crates/operation/src/components/: ballistic.rs  detonate.rs  formation.rs  mod.rs  operation.rs  orbit.rs  travel.rs  weapon.rs
crates/operation/src/systems/: ballistic_to.rs  cleanup_detonation.rs  initialize_weapon_instances.rs  maneuver_index_updated.rs  mod.rs  orbit_around.rs  travel_straight_to.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: cli.rs  lib.rs
crates/preprocess/src/core/: dataset.rs  fill_no_data.rs  transformers.rs
crates/preprocess/src/process/: downsample.rs  mod.rs  reproject.rs  split.rs  stitch.rs
crates/radar/: Cargo.toml
crates/radar/src/: gizmos.rs  lib.rs  plugin.rs  shape.rs
crates/ron_asset/: Cargo.toml
crates/ron_asset/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  consts.rs  lib.rs
crates/weapons/: Cargo.toml
crates/weapons/src/: inventory.rs  lib.rs  plugin.rs
crates/weapons/src/data/: mod.rs  model.rs  movement.rs  radar.rs  transformation.rs  weapon.rs
data/shapefiles/: .gitignore  render_shapefile.py
resources/earth/: README.md  bathyometry.tif  bathyometry.tif.aux.xml  daytime.tif  distance.tif  nighttime.tif  ocean.tif  topography.tif  topography.tif.aux.xml
(+7 files in other folders)
