[workspace]
resolver = "3"
members = ["crates/*", "crates/earth/processor"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = {version = "0.17.2", features = ["file_watcher"] }
bevy_a11y = "0.17.2"
bevy_animation = "0.17.2"
bevy_anti_alias = "0.17.2"
bevy_app = "0.17.2"
bevy_asset = "0.17.2"
bevy_audio = "0.17.2"
bevy_camera = "0.17.2"
bevy_color = "0.17.2"
bevy_core_pipeline = "0.17.2"
bevy_dev_tools = "0.17.2"
bevy_derive = "0.17.2"
bevy_diagnostic = "0.17.2"
bevy_ecs = "0.17.2"
bevy_feathers = "0.17.2"
bevy_gilrs = "0.17.2"
bevy_gltf = "0.17.2"
bevy_gizmos = "0.17.2"
bevy_image = "0.17.2"
bevy_input = "0.17.2"
bevy_internal = "0.17.2"
bevy_input_focus = "0.17.2"
bevy_light = "0.17.2"
bevy_log = "0.17.2"
bevy_math = "0.17.2"
bevy_mesh = "0.17.2"
bevy_pbr = "0.17.2"
bevy_picking = "0.17.2"
bevy_platform = "0.17.2"
bevy_post_process = "0.17.2"
bevy_reflect = "0.17.2"
bevy_render = "0.17.2"
bevy_remote = "0.17.2"
bevy_scene = "0.17.2"
bevy_shader = "0.17.2"
bevy_solari = "0.17.2"
bevy_sprite = "0.17.2"
bevy_sprite_render = "0.17.2"
bevy_state = "0.17.2"
bevy_tasks = "0.17.2"
bevy_text = "0.17.2"
bevy_time = "0.17.2"
bevy_transform = "0.17.2"
bevy_ui = "0.17.2"
bevy_ui_render = "0.17.2"
bevy_ui_widgets = "0.17.2"
bevy_utils = "0.17.2"
bevy_winit = "0.17.2"
bevy_window = "0.17.2"

ron = "0.11.0"
rand = "0.9.2"
bytemuck = "1.5"
bevy-inspector-egui = "0.34.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
bevy_hanabi = { version = "0.17", features = ["3d", "serde"] }
big_space = { version = "0.11.0", features = ["camera", "debug"] }
