[workspace]
resolver = "3"
members = [
    "crates/earth",
    "crates/preprocess"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
num = "0.4"
gag = "1.0.0"
tiff = "0.10"
rand = "0.9"
glam = "0.30.2"
rayon = "1.10.0"
ndarray = "0.16.1"
bytemuck = "1"
thiserror = "2.0.8"
itertools = "0.14.0"
thread_local = "1.1.8"

bitflags = "2.10.0"
gdal-sys = "0.11.0"
serde = "1.0.210"
async-channel = "2.1"
slab = "0.4.9"
strum = "0.27.1"
strum_macros = "0.27.1"
big_space = { version = "0.11", features = ["i32"] }
clap = { version = "4.5.17", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
gdal = { version = "0.18.0", features = ["bindgen", "ndarray"] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bevy = { version = "0.17.2", default-features = false, features = ["bevy_dev_tools", "file_watcher"] }

waw_earth = { path = "crates/earth" }
waw_earth_preprocess = { path = "crates/preprocess" }
