[package]
name = "waw_core"
edition.workspace = true
version.workspace = true

[dependencies]
bevy_log.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_window.workspace = true
bevy_internal.workspace = true
bevy_transform.workspace = true
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
bevy.workspace = true