[package]
name = "waw_countries"
edition.workspace = true
version.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_math.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
bevy_text.workspace = true
bevy_ui.workspace = true
bevy_color.workspace = true
bevy_render.workspace = true
bevy_camera.workspace = true
bevy_transform.workspace = true

serde.workspace = true
big_space.workspace = true

waw_geocoord = { path = "../geocoord" }
waw_ron_asset = { path = "../ron_asset" }
waw_earth = { path = "../earth" }
waw_radar = { path = "../radar" }
waw_combatants = { path = "../combatants" }

[dev-dependencies]
bevy.workspace = true
big_space.workspace = true
bevy-inspector-egui.workspace = true

waw_core = { path = "../core" }
waw_utils = { path = "../utils" }
waw_earth = { path = "../earth" }