[package]
name = "waw_earth"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ui.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_text.workspace = true
bevy_mesh.workspace = true
bevy_math.workspace = true
bevy_image.workspace = true
bevy_state.workspace = true
bevy_asset.workspace = true
bevy_pbr.workspace = true
bevy_gizmos.workspace = true
bevy_shader.workspace = true
bevy_camera.workspace = true
bevy_derive.workspace = true
bevy_platform.workspace = true
bevy_transform.workspace = true
bevy_render.workspace = true
bevy_reflect.workspace = true
bevy_color.workspace = true
bevy_log.workspace = true
big_space.workspace = true
bytemuck.workspace = true
bevy_core_pipeline.workspace = true
rand.workspace = true

waw_utils = { path = "../utils" }

[dev-dependencies]
bevy.workspace = true
waw_core = { path = "../core" }
bevy-inspector-egui.workspace = true