[package]
name = "operation"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_log.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_math.workspace = true
bevy_time.workspace = true
bevy_image.workspace = true
bevy_state.workspace = true
bevy_asset.workspace = true
bevy_camera.workspace = true
bevy_render.workspace = true
bevy_reflect.workspace = true
bevy_internal.workspace = true
bevy_platform.workspace = true
bevy_transform.workspace = true

big_space.workspace = true
bevy_hanabi.workspace = true

waw_earth = { path = "../earth" }
waw_weapons = { path = "../weapons" }
waw_geocoord = { path = "../geocoord" }

[dev-dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true

waw_core = { path = "../core" }
waw_utils = { path = "../utils" }