[package]
name = "waw_weapons"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_gltf.workspace = true
bevy_math.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
bevy_transform.workspace = true

serde.workspace = true

waw_ron_asset = { path = "../ron_asset" }